ssf/web/docroot/css/ss_mobile_iphone.css
/* ... */
.action-dialog { 
	display: none;
	top: 38px; 
	left: 5px;
	right: 5px;
	padding: 10px;
	border-left: 1px solid #1C5894;
	border-right: 1px solid #1C5894;
	border-top: 2px solid #1C5894;
	border-bottom: 4px solid #1C5894;
	background: #e8e9e6 url(images/mobile/putty_blend3.png) repeat-x;
	background-position: bottom;
	}

.search	a, .homelink a { 
	color: #fff;
	}

#actions { 
	top: 0px; 
	left: 0px; 
	padding: 4px;
	background-color: #c3c5c0;
	background-image: url(images/mobile/level_one_pattern4.gif);
	background-repeat: repeat-x;
	background-position: top;
	border-bottom: 1px solid #949494;
	white-space: nowrap;
	vertical-align: middle;
	}
#actions a {
	font-size: 13px !important; 
	font-weight: bold; 
	padding: 4px;
	margin-right: 3px;
	}
		
.dialog-head { 
	font-size: .95em;
	font-weight: bold;
	text-transform: uppercase;
	margin-bottom: .5em;
	}
.dialog-content { 
	margin-bottom: .3em;
	}

.menu-spacer { 
	border-top: 2px solid #d2d5d1;
	margin-top: 5px;
	height: 5px;
	line-height:.5em;
	}
.menu-item {padding-left: .5em; margin-bottom: 10px}
.menu-item a { font-size: 1em;}
.menu-curlevel {font-weight: bold;}	

#micro-blog-a { 
	color: black;
	} 	
#micro-blog-date {
	padding-left: 20px;
	color: #949691;	
	}
#micro-blog-clear {
	margin-left: 2em; 
	}
#micro-blog-buttons {
	margin-top: .3em; 
	}
#micro-blog-text {
	width: 250px;h
	}
.entry-actions {
	text-align: right; 
	background-color: #eceeec;
	padding: 5px;
	padding-left: 10px;
    }
.entry-actions img{
	padding-right: 15px;
    }
.entry-action-buttons2 {
	padding-top: 5px;
	padding-left: 10px;
	}

#categoryTable {
	table-layout:fixed;
	width: 100%;
	}
#categoryTable td {
	text-align: center;
	padding: 4px;
	width: 30%;
	background-color: transparent;
	}
.category {
	position: absolute;
	top: 40px;
	width: 100%;
	height: 28px;
	text-align: center;
	background-color: #fff;
	}
.category-on {
	font-size: 16px;
	font-weight: bold;
	background-color: #fff;
	}	
.category-off {
	font-size: 14px;
	font-weight: bold;
	background-color: #b8b8b8;
	}
	
.content {
	width: 100%;
	}

.userid {
	background-color: #efeeec; /* #fef7c7; #f8f9cd;*/
	border-bottom: 1px solid #e2e5e1;
	}
.username {
	font-size: 20px;
	padding: 5px;
	padding-bottom: 0px;
	}
.phone, .email {
	font-size: 15px;
	color: #666;
	padding-top: 2px;
	padding-bottom: 2px;
	margin-left: 23%;
	}
.phone-2, .email-2 {
	font-size: 15px;
	color: #666;
	padding: 3px;
	margin-left: 30px;
	}
.userid-clear {
	clear: both;
	height: 0px;
	}
.userid img {
	position: relative;
	top: 0px;
	left: 0px;
	width: 20%;
	float: left;
	margin-right: 6px;
	}	

.ws-title {
	font-size: 1em;
	font-weight: bold;
	padding: 5px;
	background-color: #c3c5c0;
	background-image: url(images/mobile/level_one_pattern4.gif);
	background-repeat: repeat-x;
	border-bottom: 1px solid #1C5894;
	white-space:nowrap;
	}

.masthead-title {
	position:relative;
	top:-7px;
	font-size: 1em;
	}
.masthead-title2 {
	font-size: .6em;
	}

/*  my links styles */
.home-grid-row {
	clear: both;

}

.home-grid-cell-1 {
	width: 32.3%;
	float: left;
	border-right: 2px solid #353838;
	border-left: 1px solid #949494;
}
.home-grid-cell {
	width: 32.3%;
	float: left;
	border-right: 2px solid #353838;
	border-left: 1px solid #888888;
	border-top: 1px solid #888888;
}

.home-grid-cell .main-item,
.home-grid-cell-1 .main-item {
	padding: 20% 5px 20%;
	text-align:center;
}

.main-item {
	color: #f6f6f6;
	font-size: 13px;
   	text-shadow: 0 1px 0 #000000;
	background-color: #505354;
	border-bottom: 1px solid #000000;
}
.main-item img { 
	vertical-align: middle;
	border:0px;
	width: 60%;
}

.main-item-label {
	margin-top: 5px;
	}

.my-item {
	font-weight: normal;
   	text-shadow: 0 1px 0 #000000;
	background-color: #fff;
	background:url(images/mobile/putty_blend4.png) repeat-x bottom;
	border-bottom: 1px solid #e2e5e1; /* #d2d5d1; */
}

.my-item img { 
	vertical-align: middle;
	margin-right: 5px;
	border:0px;
}

/*  folder styles */
.folders {
	position: relative;
	}
.folder-content {
	background-color: #505354;
	}
	
.folder-head {
	clear: both; 
	color: #fafafa;
	font-size: .85em;
	text-align: center;
	font-weight: bold;
	vertical-align: middle;
	padding: 2px 10px;
	letter-spacing: 1px;
	background:#b8b8b8 url(images/mobile/trans10_black_blend.png) repeat-x top;
	}

.folder-item {
	font-size: 1.1em;
	background-color: #fff;
	padding: 6px 4px 6px 15px;
	border-bottom: 1px solid #cccccc;
	}
.folder-item-ws {
	background-color: #f6f6f6;
	border-bottom: 1px solid #cccccc;
	}
.folder-item-subtext {
	font-size: 10px;
	color:#999;
	}

/*  footer styles */
.footerbar				{ position: relative; left: 0px; bottom: 0px; height: 40px; width: 100%; margin: 20px 0 0 0; }
.footerbar #logo		{ position: relative; top: 8px; left: 8px; }
.footerbar .copyright	{ position: relative; top: -8px; left: 40px; width: 250px; color: #cccccc; }


/* Entry styles - Blog, Recent, etc */

.entry {
	position: relative;
	border-bottom: 1px solid #e2e5e1; /* #d2d5d1; */
	background:#fff url(images/mobile/putty_blend4.png) repeat-x bottom;
	padding-top: 5px;
	padding-bottom: 5px;
	min-height: 30px;
	}
.entry-title {
	font-size: 1em;
	line-height: 1em;
	font-weight: bold;
	padding-top: 5px;
	padding-right: 34px;
	padding-left: 10px;
	}

.entry-title div.doc-number {
	color: #666;
	padding-right: 5px;
	font-size: 14px;
	font-weight: normal;
	}
.entry-content {
	font-size: 16px;
	color: #333;
	padding-right: 15px;
	padding-top: 5px;
	padding-bottom: 10px;
	padding-left: 10px;
	}
.entry-element {
	font-size: 14px;
	color: #666;
	padding-top: 4px;
	padding-left: 12px;
	}
.entry-caption {
	font-weight: bold;
	font-size: 12px;
	color: #000;
	padding-top: 4px;
	}
.entry-signature {
	margin-top: 2px;
	margin-left: 10px;
	}
.entry-author {
	font-size: 14px;
	}
.entry-date {
	font-size: 12px;
	color: #666;
	padding-left: 5px;
	}
.entry-type {
	font-size: 12px;
	color: #666;
	margin: 0px;
	padding-top: 8px;
	padding-bottom: 10px;
	padding-left: 10px;
	}
.entry-type span {
	padding: 2px 5px;
	}
/* ... */

